switch the dark mode to class and fix toggle styles

--- a/src/styles/custom/_themeToggle.scss
+++ b/src/styles/custom/_themeToggle.scss
@@ -25,7 +25,7 @@
       opacity 0.5s cubic-bezier(0.25, 0, 0.3, 1);
   }
 
-  [data-theme='dark'] & {
+  .dark & {
     .sun {
       transform: scale(1.75);
       transition-timing-function: cubic-bezier(0.25, 0, 0.3, 1);
